--- a/changelog.txt
+++ b/changelog.txt
@@ -17,6 +17,8 @@ FEATURES
 - option to show/hide TV episode/season numbers on home screen (hidden by default)
 - option to show/hide music disc numbers on home screen/music visualization (hidden by default)
 
+v.3.0.1
+- updated Revamp Theme to 5.0.4
 
 v.3.0.0
 - initial conversion for Isengard
