added option to hide image in favorites blade
Hiding the image in the favorites blade allows more favorites to be
shown on the blade before having to scroll to see all favorites.

--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,10 @@ FEATURES
   http://forums.gbpvr.com/forumdisplay.php?55-X-NEWA
 - option to show/hide TV episode/season numbers on home screen (hidden by default)
 - option to show/hide music disc numbers on home screen/music visualization (hidden by default)
+- option to hide image preview in favorites blade and show more favorites on one screen
+
+v.3.0.3
+- added option to hide image preview in favorites blade and show more favorites instead
 
 v.3.0.2
 - added XML so NextPVR recording options are displayed during timer creation
